RESOLVED FIXED77186
[Chromium] REGRESSION(r87067): WebFrame::setFindEndstateFocusAndSelection() doesn't set the selection for <input> and <textarea>
https://bugs.webkit.org/show_bug.cgi?id=77186
Summary [Chromium] REGRESSION(r87067): WebFrame::setFindEndstateFocusAndSelection() d...
Attachments
Patch (6.21 KB, patch)
2012-01-26 22:31 PST, Kent Tamura
no flags
Kent Tamura
Comment 1 2012-01-26 22:31:52 PST
Hajime Morrita
Comment 2 2012-01-29 20:04:31 PST
Comment on attachment 124265 [details] Patch Looks OK. But having if (host->hasTagName(HTMLNames::inputTag) || host->hasTagName(HTMLNames::textareaTag)) looks cryptic a bit. Hopefully we can give some intention revealing name for this kind of check.
Kent Tamura
Comment 3 2012-01-29 20:13:41 PST
(In reply to comment #2) > Looks OK. But having if (host->hasTagName(HTMLNames::inputTag) || host->hasTagName(HTMLNames::textareaTag)) looks cryptic a bit. Hopefully we can give some intention revealing name for this kind of check. How about changing it to "if (host->isFocusable())" ? Does it make sense for non-builtin shadow DOM components?
Hayato Ito
Comment 4 2012-01-29 21:29:28 PST
(In reply to comment #3) > (In reply to comment #2) > > Looks OK. But having if (host->hasTagName(HTMLNames::inputTag) || host->hasTagName(HTMLNames::textareaTag)) looks cryptic a bit. Hopefully we can give some intention revealing name for this kind of check. > > How about changing it to "if (host->isFocusable())" ? Does it make sense for non-builtin shadow DOM components? I don't think it make sense for non-buitin shadow DOM components. I cannot see a clear reason to return host instead of an internal focusable element in case of non-builtin shadow DOM components.
Kent Tamura
Comment 5 2012-01-29 21:36:19 PST
ok, I'm landing the patch as is for now.
WebKit Review Bot
Comment 6 2012-01-29 23:23:15 PST
Comment on attachment 124265 [details] Patch Clearing flags on attachment: 124265 Committed r106216: <http://trac.webkit.org/changeset/106216>
Note You need to log in before you can comment on or make changes to this bug.